--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Fluxette todo example.",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node ."
   },
   "keywords": [
     "fluxette",
@@ -14,14 +14,14 @@
   "author": "synchronous",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^5.8.3",
+    "babel-core": "^5.8.12",
     "babel-loader": "^5.3.2",
     "react-hot-loader": "^1.2.8",
-    "webpack": "^1.10.1",
+    "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "fluxette": "^0.8.0",
+    "fluxette": "^0.12.0",
     "react": "^0.13.3"
   }
 }
