--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "author": "synchronous",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^5.8.22",
+    "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
-    "react-hot-loader": "^1.2.8",
-    "webpack": "^1.11.0",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "fluxette": "^0.15.4",
-    "react": "^0.13.3"
+    "fluxette": "^0.19.0",
+    "fluxette-react": "^0.19.1",
+    "react": "^0.13.3",
+    "reducer": "^0.19.0"
   }
 }
